Thu Dec 25 05:38:43 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_utils.h: Updated explanation of string
	  encoding.

Thu Dec 25 05:37:36 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_values.cc: Fixed problem with dereferencing
	  a pointer to the end of a string in debug output.

Sun Dec 21 23:35:49 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Refactor recently relocated code
	  to reduce duplication.

Sun Dec 21 21:44:07 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc: Renamed
	  skip_and_check_tname_in_key() to check_tname_in_key() as it doesn't
	  do any sort of skipping!

Sun Dec 21 14:54:49 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.cc,backends/quartz/quartz_postlist.h,
	  tests/quartztest.cc: Subsumed QuartzPostList::add_entry and
	  QuartzPostList::delete_entry into QuartzPostList::merge_changes.

Sun Dec 21 03:21:42 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.cc,
	  backends/quartz/quartz_postlist.cc,
	  backends/quartz/quartz_postlist.h: Move merging on postlist changes
	  into QuartzPostList in preparation for an efficient
	  reimplementation.

Sun Dec 21 01:47:07 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_postlist.h,
	  backends/quartz/quartz_table_entries.h: Fixed typos and incorrect
	  comments.

Sat Dec 20 22:11:26 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/: Removed several needless inclusions of
	  quartz_table_entries.h.

Sat Dec 20 16:31:46 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/,docs/quartzdesign.html: Removed all the quartz
	  lexicon code and docs.  It's been disabled for ages, and we've
	  not missed it.

Sat Dec 20 01:21:47 GMT 2003  Olly Betts <olly@survex.com>

	* backends/quartz/quartz_database.h: Added doxygen comments for the
	  QuartzWritableDatabase members we use to buffer changes.
